# cbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.adoc  config.json.tmpl
include/: bank.h  cbot.h  cmds.h  util.h
src/: bank.c  bank_cmds.c  cbot.c  cmd_bf.c  cmd_calc.c  cmds.c  main.c  util.c
